--- a/output.css
+++ b/output.css
@@ -231,29 +231,26 @@
   .top-\[18\%\] {
     top: 18%;
   }
-  .right-0 {
-    right: calc(var(--spacing) * 0);
-  }
-  .right-1 {
-    right: calc(var(--spacing) * 1);
-  }
-  .right-\[5\] {
-    right: 5;
-  }
   .right-\[29\.5\%\] {
     right: 29.5%;
   }
-  .right-\[50\%\] {
-    right: 50%;
+  .bottom-\[10px\] {
+    bottom: 10px;
   }
-  .right-\[50\] {
-    right: 50;
+  .bottom-\[120px\] {
+    bottom: 120px;
   }
-  .right-\[50px\] {
-    right: 50px;
+  .bottom-\[140px\] {
+    bottom: 140px;
   }
   .bottom-\[150px\] {
     bottom: 150px;
+  }
+  .bottom-\[160px\] {
+    bottom: 160px;
+  }
+  .bottom-\[170px\] {
+    bottom: 170px;
   }
   .bottom-\[640px\] {
     bottom: 640px;
@@ -462,44 +459,11 @@
   .aspect-square {
     aspect-ratio: 1 / 1;
   }
-  .h-\[0px\] {
-    height: 0px;
-  }
-  .h-\[00px\] {
-    height: 00px;
-  }
-  .h-\[30\] {
-    height: 30;
-  }
-  .h-\[40px\] {
-    height: 40px;
-  }
   .h-\[50px\] {
     height: 50px;
   }
   .h-\[100px\] {
     height: 100px;
-  }
-  .h-\[300\] {
-    height: 300;
-  }
-  .h-\[300p\] {
-    height: 300p;
-  }
-  .h-\[300px\] {
-    height: 300px;
-  }
-  .h-\[400px\] {
-    height: 400px;
-  }
-  .h-\[450px\] {
-    height: 450px;
-  }
-  .h-\[500px\] {
-    height: 500px;
-  }
-  .h-\[700px\] {
-    height: 700px;
   }
   .h-screen {
     height: 100vh;
@@ -513,38 +477,14 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
-  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
-  }
-  .w-\[00px\] {
-    width: 00px;
-  }
-  .w-\[70px\] {
-    width: 70px;
-  }
-  .w-\[90\%\] {
-    width: 90%;
   }
   .w-\[300px\] {
     width: 300px;
   }
   .w-\[400px\] {
     width: 400px;
-  }
-  .w-\[700px\] {
-    width: 700px;
-  }
-  .w-\[720px\] {
-    width: 720px;
-  }
-  .w-\[730px\] {
-    width: 730px;
-  }
-  .w-\[800px\] {
-    width: 800px;
   }
   .w-screen {
     width: 100vw;
@@ -557,12 +497,6 @@
   }
   .max-w-screen {
     max-width: 100vw;
-  }
-  .min-w-\[70px\] {
-    min-width: 70px;
-  }
-  .min-w-\[720px\] {
-    min-width: 720px;
   }
   .min-w-\[730px\] {
     min-width: 730px;
@@ -652,52 +586,12 @@
     --tw-translate-y: 100%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-x-\[-\%\] {
-    --tw-translate-x: -%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-\[-0\%\] {
-    --tw-translate-x: -0%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-\[-1\%\] {
-    --tw-translate-x: -1%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .translate-x-\[-2\%\] {
     --tw-translate-x: -2%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-x-\[-4\%\] {
-    --tw-translate-x: -4%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-\[-5\%\] {
-    --tw-translate-x: -5%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-\[-10\%\] {
-    --tw-translate-x: -10%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-\[-20\%\] {
-    --tw-translate-x: -20%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-\[-30\%\] {
-    --tw-translate-x: -30%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-\[-40\%\] {
-    --tw-translate-x: -40%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .translate-x-\[-50\%\] {
     --tw-translate-x: -50%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-\[-330\%\] {
-    --tw-translate-x: -330%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-3d {
@@ -1004,12 +898,6 @@
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
-  .gap-\[0px\] {
-    gap: 0px;
-  }
-  .gap-\[20px\] {
-    gap: 20px;
-  }
   .gap-\[50px\] {
     gap: 50px;
   }
@@ -1110,17 +998,8 @@
   .rounded {
     border-radius: 0.25rem;
   }
-  .rounded-\[2\] {
-    border-radius: 2;
-  }
   .rounded-\[16px\] {
     border-radius: 16px;
-  }
-  .rounded-\[20\] {
-    border-radius: 20;
-  }
-  .rounded-\[20p\] {
-    border-radius: 20p;
   }
   .rounded-\[20px\] {
     border-radius: 20px;
@@ -1444,17 +1323,8 @@
   .p-3 {
     padding: calc(var(--spacing) * 3);
   }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
-  }
   .p-5 {
     padding: calc(var(--spacing) * 5);
-  }
-  .p-52 {
-    padding: calc(var(--spacing) * 52);
-  }
-  .px-1 {
-    padding-inline: calc(var(--spacing) * 1);
   }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
@@ -1465,77 +1335,14 @@
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
   }
-  .px-\[0px\] {
-    padding-inline: 0px;
-  }
-  .px-\[4px\] {
-    padding-inline: 4px;
-  }
-  .px-\[5\] {
-    padding-inline: 5;
-  }
-  .px-\[40px\] {
-    padding-inline: 40px;
-  }
   .px-\[45px\] {
     padding-inline: 45px;
-  }
-  .px-\[50\] {
-    padding-inline: 50;
-  }
-  .px-\[50p\] {
-    padding-inline: 50p;
-  }
-  .px-\[50px\] {
-    padding-inline: 50px;
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
-  .py-\[0px\] {
-    padding-block: 0px;
-  }
-  .py-\[4\] {
-    padding-block: 4;
-  }
-  .py-\[10px\] {
-    padding-block: 10px;
-  }
-  .py-\[20px\] {
-    padding-block: 20px;
-  }
-  .py-\[30px\] {
-    padding-block: 30px;
-  }
-  .py-\[40\] {
-    padding-block: 40;
-  }
-  .py-\[40p\] {
-    padding-block: 40p;
-  }
-  .py-\[40px\] {
-    padding-block: 40px;
-  }
   .py-\[50px\] {
     padding-block: 50px;
-  }
-  .pt-\[0px\] {
-    padding-top: 0px;
-  }
-  .pt-\[2\] {
-    padding-top: 2;
-  }
-  .pt-\[20\] {
-    padding-top: 20;
-  }
-  .pt-\[20p\] {
-    padding-top: 20p;
-  }
-  .pt-\[20px\] {
-    padding-top: 20px;
-  }
-  .pt-\[40px\] {
-    padding-top: 40px;
   }
   .pt-\[50px\] {
     padding-top: 50px;
@@ -1543,26 +1350,11 @@
   .pt-\[160px\] {
     padding-top: 160px;
   }
-  .pr-\[2\] {
-    padding-right: 2;
-  }
-  .pr-\[5\] {
-    padding-right: 5;
-  }
-  .pr-\[50\] {
-    padding-right: 50;
-  }
-  .pr-\[50p\] {
-    padding-right: 50p;
-  }
   .pr-\[50px\] {
     padding-right: 50px;
   }
   .pr-\[541px\] {
     padding-right: 541px;
-  }
-  .pb-\[0px\] {
-    padding-bottom: 0px;
   }
   .pb-\[5px\] {
     padding-bottom: 5px;
@@ -1572,15 +1364,6 @@
   }
   .pb-\[30px\] {
     padding-bottom: 30px;
-  }
-  .pb-\[50px\] {
-    padding-bottom: 50px;
-  }
-  .pb-\[60px\] {
-    padding-bottom: 60px;
-  }
-  .pb-\[90px\] {
-    padding-bottom: 90px;
   }
   .text-center {
     text-align: center;
@@ -1639,38 +1422,17 @@
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
   }
-  .text-\[0px\] {
-    font-size: 0px;
-  }
-  .text-\[2px\] {
-    font-size: 2px;
-  }
   .text-\[13px\] {
     font-size: 13px;
   }
   .text-\[15px\] {
     font-size: 15px;
   }
-  .text-\[20px\] {
-    font-size: 20px;
-  }
   .text-\[23px\] {
     font-size: 23px;
   }
-  .text-\[25px\] {
-    font-size: 25px;
-  }
   .text-\[26px\] {
     font-size: 26px;
-  }
-  .text-\[30px\] {
-    font-size: 30px;
-  }
-  .text-\[40px\] {
-    font-size: 40px;
-  }
-  .text-\[50px\] {
-    font-size: 50px;
   }
   .leading-none {
     --tw-leading: 1;
@@ -1765,9 +1527,6 @@
   .\[color\:red\]\/50\! {
     color: color-mix(in oklab, red 50%, transparent) !important;
   }
-  .text-\[\#\#7b92b6\] {
-    color: ##7b92b6;
-  }
   .text-\[\#4b6a9b\] {
     color: #4b6a9b;
   }
@@ -1776,33 +1535,6 @@
   }
   .text-\[\#0079ff\] {
     color: #0079ff;
-  }
-  .text-\[\#\] {
-    color: #;
-  }
-  .text-\[2\] {
-    color: 2;
-  }
-  .text-\[20\] {
-    color: 20;
-  }
-  .text-\[20p\] {
-    color: 20p;
-  }
-  .text-\[b\] {
-    color: b;
-  }
-  .text-\[bl\] {
-    color: bl;
-  }
-  .text-\[bla\] {
-    color: bla;
-  }
-  .text-\[blac\] {
-    color: blac;
-  }
-  .text-\[black\] {
-    color: black;
   }
   .text-blue-700 {
     color: var(--color-blue-700);
